# llvm-compiler

./: Cargo.toml
Lib/: __builtins__.newlang  test.newlang  test2.newlang
Lib/__builtins__/: __exports__.newlang  functions.newlang  interfaces.newlang  str.newlang
Lib/__ncache__/: HelloWorld.nbyte
Lib/base64/: __exports__.newlang  functions.newlang
Lib/bytetools/: __exports__.newlang  translate.newlang
Lib/character/: CharRange.newlang  CharRef.newlang  __exports__.newlang  asciiFunctions.newlang  blocks.newlang  classes.newlang  constants.newlang
Lib/clargs/: HelpFormatter.newlang
Lib/collections/: ChainMap.newlang  Counter.newlang  DefaultDict.newlang  Deque.newlang  IdentityMap.newlang  OrderedDict.newlang  Pair.newlang  PriorityQueue.newlang  Stack.newlang  __exports__.newlang  decorations.newlang
Lib/functools/: functions.newlang
Lib/interfaces/: __exports__.newlang  interfaces.newlang
Lib/itertools/: __exports__.newlang  combinators.newlang  functions.newlang  generators.newlang  infiniteGenerators.newlang  tee.newlang
Lib/json/: json.newlang  utils.newlang
Lib/math/: __exports__.newlang  constants.newlang  functions.newlang
Lib/numtools/: BoolRef.newlang  IntRef.newlang  __exports__.newlang  float.newlang  functions.newlang  num.newlang
Lib/path/: __exports__.newlang
Lib/regex/: Match.newlang  Pattern.newlang  __exports__.newlang  backtrack.newlang  builder.newlang  cache.newlang  compile.newlang  dfa.newlang  exec.newlang  expand.newlang  functions.newlang  inputs.newlang  literal.newlang  opt.newlang  parser.newlang  pikevm.newlang  prog.newlang  trait.newlang  unicode.newlang  (+1 more)
src/: arguments.rs  macros.rs  main.rs
(+320 files in other folders)
