[package]
name = "llvm_compiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
backtrace = "0.3.63"
itertools = "0.10.1"
num = "0.4.0"
once_cell = "1.8.0"
regex = "1.5.4"
unicode-xid = "0.2.2"
unicode-normalization = "0.1.19"

# inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm12-0"] }
