[package]
name = "llvm_compiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.8.1"
dashmap = "5.2.0"
derive-new = "0.5.9"
either = "1.6.1"
indexmap = "1.8.1"
itertools = "0.10.3"
num = "0.4.0"
once_cell = "1.10.0"
parking_lot = "0.12.0"
regex = "1.5.5"
unicode-xid = "0.2.2"
unicode-normalization = "0.1.19"
walkdir = "2.3.2"

# inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm12-0"] }
