[package]
name = "llvm_compiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.8.2"
dashmap = "5.4.0"
derive-new = "0.5.9"
either = "1.8.1"
indexmap = "1.9.2"
itertools = "0.10.5"
num = "0.4.0"
once_cell = "1.17.0"
parking_lot = "0.12.1"
regex = "1.7.1"
unicode-xid = "0.2.4"
unicode-normalization = "0.1.22"
walkdir = "2.3.2"

# inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm12-0"] }
